Fix general settings layout issues

--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -6,6 +6,7 @@
 .page-wrapper {
   margin: 50px auto 0 auto;
   background-color: #414755;
+  min-height: calc(100vh - 64px);
 }
 
 .page-wrapper > .container-fluid {
